Prevent agent upgrade from rest (#260)
* Prevent agent upgrade from REST for agents that do not support upgrade

* Do nothing for UpgradeTo if SupportsUpgrade is false

* sync swagger

* Rename to AgentUpgrade

* Test agent upgrade returns error when agent does not exist
